add search by keywords and datetime
