# resources/swagger/v1/openapi.json
@@ -77,7 +77,16 @@
                         "$ref": "#/components/parameters/authors[]"
                     },
                     {
+                        "$ref": "#/components/parameters/keywords[]"
+                    },
+                    {
                         "$ref": "#/components/parameters/sort"
+                    },
+                    {
+                        "$ref": "#/components/parameters/start_at"
+                    },
+                    {
+                        "$ref": "#/components/parameters/end_at"
                     }
                 ],
                 "responses": {
@@ -595,6 +604,13 @@
                     "example": 1
                 }
             },
+            "StringArray": {
+                "type": "array",
+                "items": {
+                    "type": "string",
+                    "example": "keyword"
+                }
+            },
             "ForgotPasswordRequest": {
                 "required": [
                     "email"
@@ -941,6 +957,15 @@
                     "$ref": "#/components/schemas/IntegerArray"
                 }
             },
+            "keywords[]": {
+                "name": "keywords[]",
+                "in": "query",
+                "description": "Filter articles by keywords (array of string)",
+                "required": false,
+                "schema": {
+                    "$ref": "#/components/schemas/StringArray"
+                }
+            },
             "sort": {
                 "name": "sort",
                 "in": "query",
@@ -953,6 +978,28 @@
                         "desc"
                     ],
                     "example": "desc"
+                }
+            },
+            "start_at": {
+                "name": "start_at",
+                "in": "query",
+                "description": "Filter published after this date (YYYY-MM-DDTHH:mm:ssZ)",
+                "required": false,
+                "schema": {
+                    "type": "string",
+                    "format": "date-time",
+                    "example": "2021-01-01T00:00:00Z"
+                }
+            },
+            "end_at": {
+                "name": "end_at",
+                "in": "query",
+                "description": "Filter published before this date (YYYY-MM-DDTHH:mm:ssZ)",
+                "required": false,
+                "schema": {
+                    "type": "string",
+                    "format": "date-time",
+                    "example": "2021-01-01T00:00:00Z"
                 }
             }
         },
